Moved the html files to the root dir

--- a/index.html
+++ b/index.html
@@ -7,20 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hälsa och välbefinnande</title>
 
-    <link rel="stylesheet" type="text/css" href="../styles/style.css">
-    <link rel="stylesheet" type="text/css" href="../styles/scrolling.css">
-    <link rel="stylesheet" type="text/css" href="../styles/topbar.css">
-    <link rel="stylesheet" type="text/css" href="../styles/text.css">
-    <link rel="stylesheet" type="text/css" href="../styles/flipcard.css">
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
+    <link rel="stylesheet" type="text/css" href="./styles/scrolling.css">
+    <link rel="stylesheet" type="text/css" href="./styles/topbar.css">
+    <link rel="stylesheet" type="text/css" href="./styles/text.css">
+    <link rel="stylesheet" type="text/css" href="./styles/flipcard.css">
 </head>
 
 <body>
 
     <section class="sec1 main" id="pic"></section>
     <section class="sectext">
-
-        <div id="anchor1"></div>
-
         <h1 id="rubrik">Häsla och välbefinnande</h1>
         <div class="stycke">
             <p>God hälsa är möjligheten att bidra till samhällets utveckling genom att medverka till sin fulla potential.</p>
@@ -179,10 +176,10 @@
                 <li><a href="https://www.ntigymnasiet.se/program/informations-och-medieteknik/sodertalje/" target="_blank">Teknik Programmet</a></li>
                 <li><a href="https://www.ntigymnasiet.se/sodertalje/oppet-hus/" target="_blank">Öppet hus</a></li>
             </ul>
-            <a href="https://www.ntigymnasiet.se/sodertalje/" target="_blank"><img src="../images/nti_images/logo.png"></a>
+            <a href="https://www.ntigymnasiet.se/sodertalje/" target="_blank"><img src="./images/nti_images/logo.png"></a>
             <ul id="footer-right">
-                <li><a href="../README.md">Used Licenses</a></li>
-                <li><a href="../LICENSE">This site's licenses</a></li>
+                <li><a href="./README.md">Used Licenses</a></li>
+                <li><a href="./LICENSE">This site's licenses</a></li>
                 <li>Kontakt:</li>
                 <li>08-550 838 52</li>
                 <li>sodertalje@ntig.se</li>
@@ -203,7 +200,7 @@
 
     <nav>
     	<div class="logo">
-    		<a href="https://www.ntigymnasiet.se/sodertalje/" target="_blank"><img src="../images/nti_images/logo-stroke.png"></a>
+    		<a href="https://www.ntigymnasiet.se/sodertalje/" target="_blank"><img src="./images/nti_images/logo-stroke.png"></a>
     	</div>
 
     	<ul>
@@ -216,6 +213,6 @@
     </nav>
 
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <script src="../scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
