--- a/om-oss.html
+++ b/om-oss.html
@@ -93,7 +93,7 @@
             <p>
                 "Hälsa och välbefinnande" har varit ett grupp projekt i klass TE17 på NTI-gymnasiet Södertälje vilket skulle betona
                 det tredje målet av De Globala Målen; god hälsa och välbefinnande. Projektet undergick under februari månad 2019 och
-                styrdes av Stefan Kundadzija som projektledare.
+                styrdes av Stefan Kundadzija som projektledare. Du kan hitta alla sidorna till arbetsområdet <a href="https://ntisod.github.io/te17-globala-malen/">här</a>
             </p>
         </div>
 
