--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
         <h1 id="rubrik">målen</h1>
 
-        <!--FLIP CARDS-->
+        <!--CARDS-->
         <article>
             <ul class="cards">
                 <li>
                     <div>
                         <h1 class="namesign" id="greencolor1">Mödradödligheten</h1>
-                        <img src="images/goal_images/mal1.jpg" alt="Bild för mål 3.1">
+                        <img src="images/goal_images/3.1.png" alt="Bild för mål 3.1">
                         <div class="cards-content" id="greencolor1">
                             <h2>Mål 3.1</h2>
                             <p>
@@ -97,7 +97,7 @@
                 <li>
                     <div>
                         <h1 class="namesign" id="greencolor2">Dödsfall hos barn</h1>
-                        <img src="images/goal_images/mal2.jpg" alt="Bild för mål 3.2">
+                        <img src="images/goal_images/3.2.png" alt="Bild för mål 3.2">
                         <div class="cards-content" id="greencolor2">
                             <h2>Mål 3.2</h2>
                             <p>
@@ -115,7 +115,7 @@
                 <li>
                     <div>
                         <h1 class="namesign" id="greencolor3">Smittande sjukdomar</h1>
-                        <img src="images/goal_images/mal3.jpg" alt="Bild för mål 3.3">
+                        <img src="images/goal_images/3.3.png" alt="Bild för mål 3.3">
                         <div class="cards-content" id="greencolor3">
                             <h2>Mål 3.3</h2>
                             <p>
@@ -132,7 +132,7 @@
                 <li>
                     <div>
                         <h1 class="namesign" id="greencolor4">Drogmissbruk</h1>
-                        <img src="images/goal_images/mal5.jpg" alt="Bild för mål 3.5">
+                        <img src="images/goal_images/3.5.png" alt="Bild för mål 3.5">
                         <div class="cards-content" id="greencolor4">
                             <h2>Mål 3.5</h2>
                             <p>
