--- a/om-oss.html
+++ b/om-oss.html
@@ -80,7 +80,7 @@
                                 <li>Text</li>
                                 <li>Bildbehandling</li>
                             </ul>
-                            <div><a href="">Om Kristoffer</a></div>
+                            <div><a href="https://kristoffer9918.github.io/portfolio/minsida.html">Om Kristoffer</a></div>
                         </div>
                     </div>
                 </li>
